# stm32h723-dm-mc02

./: .config  CMakeLists.txt  README.md  rtconfig.h  template.uvoptx  template.uvprojx
applications/: main.c
board/: Kconfig  SConscript  board.c  board.h
board/CubeMX_Config/: .mxproject  CubeMX_Config.ioc
board/CubeMX_Config/Inc/: stm32h7xx_hal_conf.h  stm32h7xx_it.h
board/CubeMX_Config/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  usbd_conf.c  usbd_desc.c
board/linker_scripts/: link.icf  link.lds  link.sct
